Solve YAML load error